k8s/charts/grafana-redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-redis
spec:
  selector:
    app: grafana-redis
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
