k8s/charts/grafana-redis/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-redis
spec:
  ingressClassName: nginx
  rules:
  - host: "grafana.alphavector.io"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: grafana-redis
            port:
              number: 3000
